--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 TODO:
 - Audit remaining code for refactors:
   - Maybe have paper / supplemental versions of figures?
-  - Better handling of default params (avoid parallel ti/np code)
   - Split environment sweep and bitstring sweep into separate processes
   - Refactor run_experiment to do one-off runs with sweep params
   - Generate additional samples where CPPN wins
@@ -9,11 +8,11 @@ TODO:
   - Use consistent formatting for "environment" and "bitstring" everywhere. Are they abbreviated?
   - Consider reorganizing code into bitstring / environment
   - Rename log files to avoid inner / outer
+  - Add mkdirs to every script that generates output.
   - Sweep logs store env_name, but maybe remove it for consistency with other logs?
   - Capitalize 'fitness' in column names.
   - Store trial as an int column, not string?
   - Maybe remove remnants of supporting crossover?
-  - Make baym variants by modifying baym
   - Maybe optimize outer_fitness?
   - Update Snakefile to re-run everything
   - Revise all comments and documentation
@@ -63,11 +62,10 @@ evolve_environment
 evolve_bitstrings
 
 extras
- - analyze_skew.py * 
- - copy_figures.py *
- - visualize_hiff.py *
- - visualize_migration.py *
- - missing_steps.py *
+ + analyze_skew.py * 
+ + visualize_hiff.py *
+ + visualize_migration.py *
+ + missing_steps.py *
 environments
  - evolve.py *
  + fitness.py
@@ -84,6 +82,8 @@ bitstrings
  - sweep.py *
  + visualize_population.py *
  + visualize_fitness.py *
+
 constants.py
 graphics.py
-sweep.py
+sweep.py *
+copy_figures.py *
